Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19940

sanity 300ug incorrect mdt hash send over wire

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      [239704.000006] Lustre: DEBUG MARKER: == sanity test 300ug: migrate overstriped dirs =========== 12:09:00 (1772442540)
      [239706.223267] LustreError: 224916:0:(mdt_xattr.c:419:mdt_dir_layout_update()) lustre-MDT0000: [0x200000404:0x3:0x0] migrate mdt hash mismatch 83000003 != 3000044
      [239706.617796] Lustre: DEBUG MARKER: sanity test_300ug: @@@@@@ FAIL: (2)stripe_count is 22, expect 20
      [239716.923004] Lustre: DEBUG MARKER: == sanity test complete, duration 112 sec ================ 12:09:13 (1772442553)

      this fail caused a reusing an lsa_pattern field for a mdt hash usage, but overstripe mark failed a check. lets use a separate field for the mdt hash

            shadow Alexey Lyashkov
            shadow Alexey Lyashkov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: