LU-19940 lfs: don't use lsa_pattern for hash

lsa_pattern is used for the pattern and for mdt hash, but overstripe
flag broke the check against the default and LOV_PATTERN_OVERSTRIPE
is treated as an lmv hash type.

Let's use separate fields for for lmv hash to avoid this issue.

HPe-bug-id: LUS-13146
Signed-off-by: Alexey Lyashkov <alexey.lyashkov@hpe.com>
Change-Id: If6348986230b45058d946d4f10cccc39956295b6
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/64297
Reviewed-by: Alexander Zarochentsev <alexander.zarochentsev@hpe.com>
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Shaun Tancheff <shaun.tancheff@hpe.com>